<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back1"
    android:id="@+id/authenticationLayout"
    tools:context=".fragments.AuthenticationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintVertical_bias=".40"
        android:layout_marginHorizontal="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            >

            <TextView
                android:id="@+id/nameLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kavoon"
                android:text="@string/logoName"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/ash"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLogo"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/emailAuthBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/email_auth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/red_btn_back"
                android:drawableLeft="@drawable/email"
                android:drawableTint="@color/white"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/phoneAuthBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/phone_auth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/green_btn_back"
                android:drawableLeft="@drawable/phone"
                android:drawableTint="@color/white"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailAuthBtn" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="16dp"
                android:background="@color/ash"
                app:layout_constraintEnd_toStartOf="@id/or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneAuthBtn" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/ash"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintEnd_toStartOf="@id/view3"
                app:layout_constraintTop_toBottomOf="@id/phoneAuthBtn"
                />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/ash"
                android:layout_margin="@dimen/_15sdp"
                app:layout_constraintStart_toEndOf="@id/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneAuthBtn"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/theme_btn_color"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>