<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back2"
    android:id="@+id/emailSignInLayout"
    tools:context=".fragments.EmailSignInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/trans_back"
        app:cardCornerRadius="@dimen/_7sdp"
        android:layout_margin="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_15sdp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/logo"
                    android:src="@drawable/logo"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    app:civ_border_color="@color/orange"
                    app:civ_border_width="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/signIn_with_Email"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_19ssp"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:hintTextColor="@color/theme_color"
                    app:boxStrokeWidth="@dimen/_1sdp"
                    app:boxStrokeColor="@color/theme_color"
                    app:startIconDrawable="@drawable/email"
                    app:startIconTint="@color/theme_color"
                    app:endIconMode="clear_text"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signIn">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/_12ssp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    app:boxStrokeWidthFocused="@dimen/_1sdp"
                    app:hintTextColor="@color/theme_color"
                    app:boxStrokeWidth="@dimen/_1sdp"
                    app:boxStrokeColor="@color/theme_color"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/theme_color"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/_12ssp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/forgot"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:fontFamily="@font/poppins"
                    android:text="Sign In"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/theme_btn_color"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgotPasswordBtn"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/alreadyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_45sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signInBtn"
                    >

                    <TextView
                        android:id="@+id/alreadyRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:includeFontPadding="false"
                        android:text="Don't SignUp Yet?"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/signUpNowBtn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/signUpNowBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="Sign Up Now"
                        android:textColor="@color/white"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="@dimen/_12sdp"
                        android:paddingVertical="@dimen/_1sdp"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:background="@drawable/theme_btn_color"
                        app:layout_constraintStart_toEndOf="@id/alreadyRegister"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@color/ash"
                    app:layout_constraintEnd_toStartOf="@id/or"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alreadyLayout" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="or"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/ash"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@id/view2"
                    app:layout_constraintEnd_toStartOf="@id/view3"
                    app:layout_constraintTop_toBottomOf="@id/alreadyLayout"
                    />

                <View
                    android:id="@+id/view3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_2sdp"
                    android:background="@color/ash"
                    android:layout_margin="@dimen/_20sdp"
                    app:layout_constraintStart_toEndOf="@id/or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alreadyLayout"
                    />

                <TextView
                    android:id="@+id/signInWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/signIn_with"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/or"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/phoneAuthBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="Phone"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/green_btn_back"
                    android:drawableLeft="@drawable/phone"
                    android:drawableTint="@color/white"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_35sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signInWith"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>